--- a/hindu-ceremony.html
+++ b/hindu-ceremony.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="dist/favicon.ico">
-    <link rel="stylesheet" href="dist/styles1.css">
+    <link rel="stylesheet" href="dist/styles2.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
               <div class="when-where">
                 <span class="strong">When:</span>
                 </br>
-                <span class="light">Sunday</br>29 June 2025</span>
+                <span class="light">Saturday</br>28 June 2025</span>
               </div>
             </div>
             <div class="col s8">
@@ -46,9 +46,9 @@
                 <span class="strong">Where:</span>
                 </br>
                 <span class="light">
-                  Lartington Hall</br>
-                  Barnard Castle</br>
-                  DL12 9BW
+                  Hindu Temple</br>
+                  172 West Road, Newcastle</br>
+                  NE4 9QB
                 </span>
               </div>
             </div>
@@ -59,8 +59,7 @@
           <div class="schedule row">
             <div class="col s3 offset-s2">
               <span class="schedule-header">Arrive</span></br>
-              <span class="schedule-time">11:30 am</span></br>
-              <span class="schedule-location">Main Hall</span></br>
+              <span class="schedule-time">TBD</span></br>
             </div>
             <div class="col s1">
               <div class="star-icon">
@@ -73,8 +72,7 @@
             </div>
             <div class="col s3 offset-s1">
               <span class="schedule-header">Ceremony</span></br>
-              <span class="schedule-time">12:30 pm</span></br>
-              <span class="schedule-location">Chapel</span></br>
+              <span class="schedule-time">TBD</span></br>
             </div>
           </div>
         </section>
@@ -84,7 +82,7 @@
             <div class="col s8 offset-s2">
               <div class="centre">
                 <h1 class="light-font">Venue</h1>
-                <h2 class="light-font">Lartington Hall<br />Barnard Castle DL12 9BW</h2>
+                <h2 class="light-font">Hindu Temple Newcastle<br />172 West Road, Newcastle<br />NE4 9QB</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2313.7712794009226!2d-1.9698488232735358!3d54.55515728359531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487c3afeb9917f95%3A0x59c0b09f5d45b433!2sLartington%20Hall!5e0!3m2!1sen!2suk!4v1731869603513!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
@@ -114,8 +112,7 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  The ceremony will take place at 12:30pm at Lartington Hall followed by a day of festivities ending at 12am<br />
-                  Please arrive at the venue between 11:30am-12pm
+                  The Hindu wedding will take place at 1pm at xxx. Afterwards we will head back to Matt’s family home in Typemouth where there will be a small party with food &amp; drink. This day is reserved for our nearest and dearest
                 </div>
               </div>
             </div>
@@ -143,7 +140,12 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  Western semi-formal, this means suits and dresses
+                  Indian formal wear
+                  <ul>
+                    <li>Women - saris, salwar kameez sets, anarkalis, lehengas, kurtas or gharara sets</li>
+                    <li>Men - kurtas, nehru jackets, sherwanis</li>
+                  </ul>
+                  Or if you prefer, western smart-casual or whatever you feel comfortable in!
                 </div>
               </div>
             </div>
@@ -199,13 +201,12 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  We have rooms on-site, please reach out to us (+44 7847 840 114) if you would like one and we can send you the options<br />
-                  Alternatively you can also stay in Barnard Castle at any of the following sites:
+                  We recommend staying in Tynemouth at any of the following hotels:
                   <ul>
-                    <li>The Morritt Hotel and Garage Spa</li>
-                    <li>Three Horseshoes Hotel</li>
-                    <li>Any of the local B&amp;B’s in Barnard Castle</li>
+                    <li>Tynemouth Castle Inn</li>
+                    <li>The Grand Hotel Tynemouth</li>
                   </ul>
+                  Alternatively Newcastle is just a short metro or taxi ride from Newcastle where there are plenty of hotel options
                 </div>
               </div>
             </div>
@@ -234,7 +235,7 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  We strongly advise you to take a taxi to the venue as there are no close transportation networks
+                  We advise you take Ubers from Tynemouth to the Temple. If you are driving then there is a carpark next to the venue
                 </div>
               </div>
             </div>
@@ -262,7 +263,6 @@
                   Please let us know that you plan to intend by 31st of January 2025
                   Could you include in your message if you would like a room on-site at the
                   venue and any dietary requirements
-
 
                   <ul>
                     <li>Email: mattalexanderhill@gmail.com</li>
