--- a/hindu-ceremony.html
+++ b/hindu-ceremony.html
@@ -38,7 +38,7 @@
               <div class="image-wrapper">
                 <h1>Matt and Nilam</h1>
                 <h2>Invite you to celebrate their wedding</h2>
-                <img class="us" src="dist/imgs/us-med.jpg">
+                <img class="us" width="600" src="dist/imgs/us2.jpg">
               </div>
             </div>
             <div class="col s2">
@@ -59,7 +59,7 @@
           <div class="schedule row">
             <div class="col s3 offset-s2">
               <span class="schedule-header">Arrive</span></br>
-              <span class="schedule-time">TBD</span></br>
+              <span class="schedule-time">12:30pm</span></br>
             </div>
             <div class="col s1">
               <div class="star-icon">
@@ -72,7 +72,7 @@
             </div>
             <div class="col s3 offset-s1">
               <span class="schedule-header">Ceremony</span></br>
-              <span class="schedule-time">TBD</span></br>
+              <span class="schedule-time">13:00pm</span></br>
             </div>
           </div>
         </section>
@@ -83,7 +83,7 @@
               <div class="centre">
                 <h1 class="light-font">Venue</h1>
                 <h2 class="light-font">Hindu Temple Newcastle<br />172 West Road, Newcastle<br />NE4 9QB</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2313.7712794009226!2d-1.9698488232735358!3d54.55515728359531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487c3afeb9917f95%3A0x59c0b09f5d45b433!2sLartington%20Hall!5e0!3m2!1sen!2suk!4v1731869603513!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2289.8129549108057!2d-1.6596339231645942!3d54.97637925152485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487e771169a74257%3A0xb39070e3ef48aa4!2sHindu%20Temple%20Newcastle!5e0!3m2!1sen!2suk!4v1732287268662!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
@@ -112,7 +112,7 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  The Hindu wedding will take place at 1pm at xxx. Afterwards we will head back to Matt’s family home in Typemouth where there will be a small party with food &amp; drink. This day is reserved for our nearest and dearest
+                  The Hindu wedding will take place at 1pm at the Hindu Temple in Newcastle<br/><br /> Afterwards we will head back to Matt’s family home in Tynemouth where there will be a small party with food &amp; drink. This day is reserved for our nearest and dearest
                 </div>
               </div>
             </div>
@@ -173,7 +173,7 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  Please RSVP by the 31st of January 2025
+                  Please RSVP by the 31st January 2025
                 </div>
               </div>
             </div>
@@ -191,7 +191,7 @@
                 <label for="faq4" class="faq-label">
                   <div class="row">
                     <div class="col s11">
-                      When is it?
+                      Where can we stay?
                     </div>
                     <div class="col s1">
                       <div class="faq-toggle-icon">
@@ -252,7 +252,7 @@
           <div class="row">
             <div class="col s6 offset-s3">
               <div class="centre">
-                <h1>RSVP</h1>
+                <h1 class="rsvp-title">RSVP</h1>
               </div>
             </div>
           </div>
@@ -260,9 +260,8 @@
             <div class="col s6 offset-s3">
               <div class="centre">
                 <span class="rsvp-text">
-                  Please let us know that you plan to intend by 31st of January 2025
-                  Could you include in your message if you would like a room on-site at the
-                  venue and any dietary requirements
+                  Please let us know that you plan to intend by 31st January 2025<br/><br/>
+                  Could you include in your message if you have any dietary requirements
 
                   <ul>
                     <li>Email: mattalexanderhill@gmail.com</li>
