--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <div class="image-wrapper">
                 <h1>Matt and Nilam</h1>
                 <h2>Invite you to celebrate their wedding</h2>
-                <img class="us" src="dist/imgs/us-med.jpg">
+                <img class="us" src="dist/imgs/us1.jpg">
               </div>
             </div>
             <div class="col s2">
@@ -54,12 +54,12 @@
             </div>
           </div>
         </section>
-        
+
         <section id="schedule">
           <div class="schedule row">
-            <div class="col s3 offset-s2">
+            <div class="col s2 offset-s1">
               <span class="schedule-header">Arrive</span></br>
-              <span class="schedule-time">11:30 am</span></br>
+              <span class="schedule-time">12:00 am</span></br>
               <span class="schedule-location">Main Hall</span></br>
             </div>
             <div class="col s1">
@@ -71,10 +71,23 @@
                 </svg>
               </div>
             </div>
-            <div class="col s3 offset-s1">
+            <div class="col s2 offset-s1">
               <span class="schedule-header">Ceremony</span></br>
               <span class="schedule-time">12:30 pm</span></br>
               <span class="schedule-location">Chapel</span></br>
+            </div>
+            <div class="col s1">
+              <div class="star-icon centre">
+                <svg preserveAspectRatio="xMidYMid meet" data-bbox="0 0 323.295 323.296" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 323.295 323.296" role="presentation" aria-hidden="true">
+                  <g>
+                  <path fill="#985e49" d="M161.647 0l57.151 104.497 104.497 57.15-104.497 57.152-57.151 104.497-57.15-104.497L0 161.647l104.497-57.15L161.647 0z"></path>
+                  </g>
+                </svg>
+              </div>
+            </div>
+            <div class="col s2 offset-s1">
+              <span class="schedule-header">Carriages</span></br>
+              <span class="schedule-time">12:00 am</span></br>
             </div>
           </div>
         </section>
@@ -115,7 +128,7 @@
                 </label>
                 <div class="faq-content">
                   The ceremony will take place at 12:30pm at Lartington Hall followed by a day of festivities ending at 12am<br />
-                  Please arrive at the venue between 11:30am-12pm
+                  Please arrive at the venue by 12:00pm
                 </div>
               </div>
             </div>
@@ -171,7 +184,7 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  Please RSVP by the 31st of January 2025
+                  Please RSVP by the 31st January 2025
                 </div>
               </div>
             </div>
@@ -189,7 +202,7 @@
                 <label for="faq4" class="faq-label">
                   <div class="row">
                     <div class="col s11">
-                      When is it?
+                      Where can we stay?
                     </div>
                     <div class="col s1">
                       <div class="faq-toggle-icon">
@@ -234,7 +247,8 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  We strongly advise you to take a taxi to the venue as there are no close transportation networks
+                  The closest train station is Darlington, you can take a taxi from there to Lartington<br /><br />
+                  Alternatively there is plenty of parking at the venue
                 </div>
               </div>
             </div>
@@ -245,7 +259,6 @@
             </div>
           </div>
         </section>
-
 
         <section id="rsvp">
           <div class="row">
@@ -259,7 +272,7 @@
             <div class="col s6 offset-s3">
               <div class="centre">
                 <span class="rsvp-text">
-                  Please let us know that you plan to intend by 31st of January 2025
+                  Please let us know that you plan to intend by 31st January 2025<br/><br/>
                   Could you include in your message if you would like a room on-site at the
                   venue and any dietary requirements
 
