add image back to mobile

--- a/hindu-ceremony.html
+++ b/hindu-ceremony.html
@@ -37,11 +37,14 @@
               </div>
             </div>
             <div class="col l8 s12">
-              <div class="image-wrapper">
-                <h1>Matt and Nilam</h1>
-                <h2>Invite you to celebrate their wedding</h2>
-                <img id="us" class="l-only" width="600" src="dist/imgs/us2.jpg">
+              <div class="centre">
+                <div class="container">
+                  <h1>Matt and Nilam</h1>
+                  <h2 class="l-only">Invite you to celebrate their wedding</h2>
+                </div>
               </div>
+              <img class="img-us img-us-l l-only" src="dist/imgs/us2.jpg">
+              <img class="img-us img-us-s s-only" src="dist/imgs/us2.jpg">
             </div>
             <div class="col l2 l-only">
               <div class="when-where">
@@ -54,6 +57,11 @@
                 </span>
               </div>
             </div>
+          <div id="invite-you">
+            <div class="row s-only">
+              <h2 class="col s12">Invite you to celebrate their wedding</h2>
+            </div>
+          </div>
           </div>
         </section>
         
@@ -85,7 +93,7 @@
               <div class="centre">
                 <h1 class="light-font">Venue</h1>
                 <h2 class="light-font">Hindu Temple Newcastle<br />172 West Road, Newcastle<br />NE4 9QB</h2>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2289.8129549108057!2d-1.6596339231645942!3d54.97637925152485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487e771169a74257%3A0xb39070e3ef48aa4!2sHindu%20Temple%20Newcastle!5e0!3m2!1sen!2suk!4v1732287268662!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2289.8129549108057!2d-1.6596339231645942!3d54.97637925152485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487e771169a74257%3A0xb39070e3ef48aa4!2sHindu%20Temple%20Newcastle!5e0!3m2!1sen!2suk!4v1732287268662!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
