--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
               <div class="centre">
                 <div class="container">
                   <h1>Matt and Nilam</h1>
-                  <h2>Invite you to celebrate their wedding</h2>
+                  <h2 class="l-only">Invite you to celebrate their wedding</h2>
                 </div>
-                <img id="us" class="l-only" src="dist/imgs/us1.jpg">
+                <img class="img-us img-us-l l-only" src="dist/imgs/us1.jpg">
+                <img class="img-us img-us-s s-only" src="dist/imgs/us1.jpg">
               </div>
             </div>
             <div class="col l2 s0 l-only">
@@ -55,6 +56,11 @@
                   DL12 9BW
                 </span>
               </div>
+            </div>
+          </div>
+          <div id="invite-you">
+            <div class="row s-only">
+              <h2 class="col s12">Invite you to celebrate their wedding</h2>
             </div>
           </div>
         </section>
@@ -98,11 +104,11 @@
 
         <section id="venue">
           <div class="row">
-            <div class="col l8 offset-l2">
+            <div class="col l8 offset-l2 s12">
               <div class="centre">
                 <h1 class="light-font">Venue</h1>
                 <h2 class="light-font">Lartington Hall<br />Barnard Castle DL12 9BW</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2313.7712794009226!2d-1.9698488232735358!3d54.55515728359531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487c3afeb9917f95%3A0x59c0b09f5d45b433!2sLartington%20Hall!5e0!3m2!1sen!2suk!4v1731869603513!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2313.7712794009226!2d-1.9698488232735358!3d54.55515728359531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487c3afeb9917f95%3A0x59c0b09f5d45b433!2sLartington%20Hall!5e0!3m2!1sen!2suk!4v1731869603513!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
