updates and registry

--- a/hindu-ceremony.html
+++ b/hindu-ceremony.html
@@ -1,3 +1,7 @@
+---
+permalink: /hindu-ceremony
+---
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -122,7 +126,8 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  The Hindu wedding will take place at 1pm at the Hindu Temple in Newcastle<br/><br /> Afterwards we will head back to Matt’s family home in Tynemouth where there will be a small party with food &amp; drink. This day is reserved for our nearest and dearest
+                  Afterwards we will head back to Matt’s family home 22 King Edward Road, Tynemouth, NE30 2RP where there will be a small party with food &amp; drink<br/><br/>
+                  Please eat a late breakfast beforehand however there will be plenty of food and drinks afterwards
                 </div>
               </div>
             </div>
@@ -216,7 +221,7 @@
                     <li>Tynemouth Castle Inn</li>
                     <li>The Grand Hotel Tynemouth</li>
                   </ul>
-                  Alternatively Newcastle is just a short metro or taxi ride from Newcastle where there are plenty of hotel options
+                  Alternatively Newcastle is just a short metro or taxi ride away from Tynemouth where there are plenty of options
                 </div>
               </div>
             </div>
@@ -226,7 +231,6 @@
               </div>
             </div>
           </div>
-
 
           <div class="faq-q">
             <div class="row">
@@ -255,8 +259,108 @@
               </div>
             </div>
           </div>
-        </section>
 
+          <div class="faq-q">
+            <div class="row">
+              <div class="col l9 offset-l1">
+                <input id="faq6" class="faq-toggle" type="checkbox">
+                <label for="faq6" class="faq-label">
+                  <div class="row">
+                    <div class="col l11 s10">
+                      How do we get from the Hindu temple to Matt’s family home
+                    </div>
+                    <div class="col l1">
+                      <div class="faq-toggle-icon">
+                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
+                      </div>
+                    </div>
+                  </div>
+                </label>
+                <div class="faq-content">
+                  The Hindu Temple is a short distance from Matt’s family home, we recommend you either Uber or drive between the two locations<br/><br/>
+                  We are looking into potentially providing travel so please let us know if this is of interest
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col l9 offset-l1">
+              <hr />
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-q">
+            <div class="row">
+              <div class="col l9 offset-l1">
+                <input id="faq7" class="faq-toggle" type="checkbox">
+                <label for="faq7" class="faq-label">
+                  <div class="row">
+                    <div class="col l11 s10">
+                      What to expect from the Hindu ceremony?
+                    </div>
+                    <div class="col l1">
+                      <div class="faq-toggle-icon">
+                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
+                      </div>
+                    </div>
+                  </div>
+                </label>
+                <div class="faq-content">
+                  The Hindu ceremony includes many different aspects which will include:
+                  <ul>
+                    <li><span class="strong">Baraat (Groom's Procession)</span></br>The groom arrives at the wedding venue on a decorated horse or car, accompanied by a lively procession of family and friends dancing to music</li>
+                    <li><span class="strong">Jaimala (Garland Exchange)</span></br>The bride and groom exchange flower garlands as a gesture of mutual acceptance</li>
+                    <li><span class="strong">Havan and Vedic Rituals</span></br>A sacred fire is lit, and the priest chants Vedic mantras, invoking blessings from deities</li>
+
+                    <li><span class="strong">Saat Phere (Seven Sacred Rounds)</span></br>The couple takes seven rounds around the sacred fire, each representing a vow to support each other in various aspects of life</li>
+                    <li><span class="strong">Sindoor and Mangalsutra</span></br>The groom applies sindoor (vermilion) on the bride's forehead and ties the mangalsutra (sacred necklace) around her neck, signifying marriage </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col l9 offset-l1">
+              <hr />
+              </div>
+            </div>
+          </div>
+
+          <div class="faq-q">
+            <div class="row">
+              <div class="col l9 offset-l1">
+                <input id="faq8" class="faq-toggle" type="checkbox">
+                <label for="faq8" class="faq-label">
+                  <div class="row">
+                    <div class="col l11 s10">
+                      Will there be a registry?
+                    </div>
+                    <div class="col l1">
+                      <div class="faq-toggle-icon">
+                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
+                      </div>
+                    </div>
+                  </div>
+                </label>
+                <div class="faq-content">
+                  The most important thing for both of us is that you are able to join us in celebrating our wedding<br/><br/>If you would like to contribute to our Honeymoon fund you can do so at the following link
+                  <div class="centre rsvp-links">
+                    <a href="https://prezola.com/buy/view/212381">
+                      <button class="button button2">Contribute</button>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col l9 offset-l1">
+              <hr />
+              </div>
+            </div>
+          </div>
+
+
+        </section>
 
         <section id="rsvp">
           <div class="row">
@@ -270,32 +374,23 @@
             <div class="col l6 offset-l3">
               <div class="centre">
                 <span class="rsvp-text">
-                  Please let us know that you plan to intend by 31st January 2025<br/><br/>
-                  Could you include in your message if you have any dietary requirements
-
-                  <ul>
-                    <li>Email: mattalexanderhill@gmail.com</li>
-                    <li>Text/Whatsapp: +44 7501 883 715</li>
-                  </ul>
-                </span>
+                  Please let us know that you plan to attend by 31st January 2025<br/><br/>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col l6 offset-l3">
+            <div class="col l6 offset-l3 s12">
               <div class="centre rsvp-links">
-                <a href="mailto:mattalexanderhill@gmail.com">
-                  <button class="button button2">Email Us</button>
-                </a>
-                <a href="tel:+447501883715">
-                  <button class="button button2">Text Us</button>
+                <a href="https://forms.gle/2YstEzdj7pqXsSLa6">
+                  <button class="button button2">RSVP</button>
                 </a>
               </div>
             </div>
           </div>
         </section>
 
-        </div>
+
+
       </main>
 		</body>
 	</head>
