--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="schedule row">
             <div class="col l2 offset-l1 s12">
               <span class="schedule-header">Arrive</span></br>
-              <span class="schedule-time">12:00 am</span></br>
+              <span class="schedule-time">12:00 pm</span></br>
               <span class="schedule-location">Main Hall</span></br>
             </div>
             <div class="col l1 l-only">
@@ -107,7 +107,7 @@
             <div class="col l8 offset-l2 s12">
               <div class="centre">
                 <h1 class="light-font">Venue</h1>
-                <h2 class="light-font">Lartington Hall<br />Barnard Castle DL12 9BW</h2>
+                <h2 class="light-font">Lartington Hall<br/>Barnard Castle DL12 9BW</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2313.7712794009226!2d-1.9698488232735358!3d54.55515728359531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487c3afeb9917f95%3A0x59c0b09f5d45b433!2sLartington%20Hall!5e0!3m2!1sen!2suk!4v1731869603513!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
@@ -137,8 +137,8 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  The ceremony will take place at 12:30pm at Lartington Hall followed by a day of festivities ending at 12am<br />
-                  Please arrive at the venue by 12:00pm
+                  The ceremony will take place at 12:30pm at Lartington Hall followed by a day of festivities ending at 12am<br/><br/>
+                  Please arrive at the venue by 12:00pm at the latest
                 </div>
               </div>
             </div>
@@ -194,7 +194,7 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  Please RSVP by the 31st January 2025
+                  Please RSVP by 31st January 2025
                 </div>
               </div>
             </div>
@@ -222,13 +222,15 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  We have rooms on-site, please reach out to us (+44 7847 840 114) if you would like one and we can send you the options<br />
+                  We have rooms on-site, please reach out to us (+44 7847 840 114) if you would like one and we can send you the options<br/>
                   Alternatively you can also stay in Barnard Castle at any of the following sites:
                   <ul>
                     <li>The Morritt Hotel and Garage Spa</li>
                     <li>Three Horseshoes Hotel</li>
                     <li>Any of the local B&amp;B’s in Barnard Castle</li>
                   </ul>
+
+                  We strongly recommend you stay within Barnard Castle or close to the surrounding area
                 </div>
               </div>
             </div>
@@ -257,7 +259,7 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  The closest train station is Darlington, you can take a taxi from there to Lartington<br /><br />
+                  The closest train station is Darlington, which is a 34 minute taxi ride away from the venue<br/><br/>
                   Alternatively there is plenty of parking at the venue
                 </div>
               </div>
@@ -268,6 +270,44 @@
               </div>
             </div>
           </div>
+
+          <div class="faq-q">
+            <div class="row">
+              <div class="col l9 offset-l1">
+                <input id="faq6" class="faq-toggle" type="checkbox">
+                <label for="faq6" class="faq-label">
+                  <div class="row">
+                    <div class="col l11 s10">
+                      Will there be a registry?
+                    </div>
+                    <div class="col l1">
+                      <div class="faq-toggle-icon">
+                        <img src="dist/imgs/faq-toggle-down.svg" width="36">
+                      </div>
+                    </div>
+                  </div>
+                </label>
+                <div class="faq-content">
+                  The most important thing for both of us is that you are able to join us in celebrating our wedding<br/><br/>If you would like to contribute to our Honeymoon fund you can do so at the following link
+                  <div class="centre rsvp-links">
+                    <a href="https://prezola.com/buy/view/212381">
+                      <button class="button button2">Contribute</button>
+                    </a>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col l9 offset-l1">
+              <hr />
+              </div>
+            </div>
+          </div>
+
+
+
+
         </section>
 
         <section id="rsvp">
@@ -282,27 +322,15 @@
             <div class="col l6 offset-l3">
               <div class="centre">
                 <span class="rsvp-text">
-                  Please let us know that you plan to intend by 31st January 2025<br/><br/>
-                  Could you include in your message if you would like a room on-site at the
-                  venue and any dietary requirements
-
-
-                  <ul>
-                    <li>Email: mattalexanderhill@gmail.com</li>
-                    <li>Text/Whatsapp: +44 7501 883 715</li>
-                  </ul>
-                </span>
+                  Please let us know that you plan to attend by 31st January 2025<br/><br/>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col l6 offset-l3">
+            <div class="col l6 offset-l3 s12">
               <div class="centre rsvp-links">
-                <a href="mailto:mattalexanderhill@gmail.com">
-                  <button class="button button2">Email Us</button>
-                </a>
-                <a href="tel:+447501883715">
-                  <button class="button button2">Text Us</button>
+                <a href="https://forms.gle/yMZApFHwN8dzuc867">
+                  <button class="button button2">RSVP</button>
                 </a>
               </div>
             </div>
