--- a/hindu-ceremony.html
+++ b/hindu-ceremony.html
@@ -34,7 +34,7 @@ permalink: /hindu-ceremony
         <section id="intro">
           <div class="row">
             <div class="col l2 l-only">
-              <div class="when-where">
+              <div class="when-where centre">
                 <span class="strong">When:</span>
                 </br>
                 <span class="light">Saturday</br>28 June 2025</span>
@@ -51,7 +51,7 @@ permalink: /hindu-ceremony
               <img class="img-us img-us-s s-only" src="dist/imgs/us2.jpg">
             </div>
             <div class="col l2 l-only">
-              <div class="when-where">
+              <div class="when-where centre">
                 <span class="strong">Where:</span>
                 </br>
                 <span class="light">
@@ -71,20 +71,14 @@ permalink: /hindu-ceremony
         
         <section id="schedule">
           <div class="schedule row">
-            <div class="col l2 offset-l1 s12">
+            <div class="col l4 offset-l1 s12">
               <span class="schedule-header">Arrive</span></br>
               <span class="schedule-time">12:30pm</span></br>
             </div>
-            <div class="col l1 l-only">
-              <div class="star-icon">
-                <svg preserveAspectRatio="xMidYMid meet" data-bbox="0 0 323.295 323.296" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 323.295 323.296" role="presentation" aria-hidden="true">
-                  <g>
-                  <path fill="#985e49" d="M161.647 0l57.151 104.497 104.497 57.15-104.497 57.152-57.151 104.497-57.15-104.497L0 161.647l104.497-57.15L161.647 0z"></path>
-                  </g>
-                </svg>
-              </div>
+            <div class="col l2 l-only">
+              <img class="star-icon" src="dist/imgs/star-icon-green.svg">
             </div>
-            <div class="col l2 offset-l1 s12">
+            <div class="col l4 s12">
               <span class="schedule-header">Ceremony</span></br>
               <span class="schedule-time">13:00pm</span></br>
             </div>
@@ -93,7 +87,7 @@ permalink: /hindu-ceremony
 
         <section id="venue">
           <div class="row">
-            <div class="col l8 offset-l2">
+            <div class="col l8 offset-l2 s12">
               <div class="centre">
                 <h1 class="light-font">Venue</h1>
                 <h2 class="light-font">Hindu Temple Newcastle<br />172 West Road, Newcastle<br />NE4 9QB</h2>
@@ -105,13 +99,13 @@ permalink: /hindu-ceremony
 
         <section id="faq">
           <div class="row">
-            <div class="col l4 offset-l1">
+            <div class="col l4 offset-l2 s12">
               <h2>FAQs</h2>
             </div>
           </div>
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq1" class="faq-toggle" type="checkbox">
                 <label for="faq1" class="faq-label">
                   <div class="row">
@@ -132,7 +126,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -140,7 +134,7 @@ permalink: /hindu-ceremony
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq2" class="faq-toggle" type="checkbox">
                 <label for="faq2" class="faq-label">
                   <div class="row">
@@ -165,7 +159,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -173,7 +167,7 @@ permalink: /hindu-ceremony
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq3" class="faq-toggle" type="checkbox">
                 <label for="faq3" class="faq-label">
                   <div class="row">
@@ -193,7 +187,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -201,7 +195,7 @@ permalink: /hindu-ceremony
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq4" class="faq-toggle" type="checkbox">
                 <label for="faq4" class="faq-label">
                   <div class="row">
@@ -226,7 +220,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -234,7 +228,7 @@ permalink: /hindu-ceremony
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq5" class="faq-toggle" type="checkbox">
                 <label for="faq5" class="faq-label">
                   <div class="row">
@@ -254,7 +248,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -262,7 +256,7 @@ permalink: /hindu-ceremony
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq6" class="faq-toggle" type="checkbox">
                 <label for="faq6" class="faq-label">
                   <div class="row">
@@ -283,7 +277,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -291,7 +285,7 @@ permalink: /hindu-ceremony
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq7" class="faq-toggle" type="checkbox">
                 <label for="faq7" class="faq-label">
                   <div class="row">
@@ -319,7 +313,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -327,7 +321,7 @@ permalink: /hindu-ceremony
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq8" class="faq-toggle" type="checkbox">
                 <label for="faq8" class="faq-label">
                   <div class="row">
@@ -353,7 +347,7 @@ permalink: /hindu-ceremony
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
