--- a/index.html
+++ b/index.html
@@ -73,13 +73,7 @@
               <span class="schedule-location">Main Hall</span></br>
             </div>
             <div class="col l1 l-only">
-              <div class="star-icon">
-                <svg preserveAspectRatio="xMidYMid meet" data-bbox="0 0 323.295 323.296" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 323.295 323.296" role="presentation" aria-hidden="true">
-                  <g>
-                  <path fill="#985e49" d="M161.647 0l57.151 104.497 104.497 57.15-104.497 57.152-57.151 104.497-57.15-104.497L0 161.647l104.497-57.15L161.647 0z"></path>
-                  </g>
-                </svg>
-              </div>
+              <img class="star-icon" src="dist/imgs/star-icon-gold.svg">
             </div>
             <div class="col l2 offset-l1 s12">
               <span class="schedule-header">Ceremony</span></br>
@@ -87,13 +81,7 @@
               <span class="schedule-location">Chapel</span></br>
             </div>
             <div class="col l1 l-only">
-              <div class="star-icon centre">
-                <svg preserveAspectRatio="xMidYMid meet" data-bbox="0 0 323.295 323.296" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 323.295 323.296" role="presentation" aria-hidden="true">
-                  <g>
-                  <path fill="#985e49" d="M161.647 0l57.151 104.497 104.497 57.15-104.497 57.152-57.151 104.497-57.15-104.497L0 161.647l104.497-57.15L161.647 0z"></path>
-                  </g>
-                </svg>
-              </div>
+              <img class="star-icon" src="dist/imgs/star-icon-gold.svg">
             </div>
             <div class="col l2 offset-l1 s12">
               <span class="schedule-header">Carriages</span></br>
@@ -116,13 +104,13 @@
 
         <section id="faq">
           <div class="row">
-            <div class="col l4 offset-l1">
+            <div class="col l4 offset-l2 s12">
               <h2>FAQs</h2>
             </div>
           </div>
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq1" class="faq-toggle" type="checkbox">
                 <label for="faq1" class="faq-label">
                   <div class="row">
@@ -143,7 +131,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -151,7 +139,7 @@
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq2" class="faq-toggle" type="checkbox">
                 <label for="faq2" class="faq-label">
                   <div class="row">
@@ -171,7 +159,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -179,7 +167,7 @@
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq3" class="faq-toggle" type="checkbox">
                 <label for="faq3" class="faq-label">
                   <div class="row">
@@ -199,7 +187,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -207,7 +195,7 @@
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq4" class="faq-toggle" type="checkbox">
                 <label for="faq4" class="faq-label">
                   <div class="row">
@@ -235,7 +223,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -244,7 +232,7 @@
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq5" class="faq-toggle" type="checkbox">
                 <label for="faq5" class="faq-label">
                   <div class="row">
@@ -265,7 +253,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
@@ -273,7 +261,7 @@
 
           <div class="faq-q">
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
                 <input id="faq6" class="faq-toggle" type="checkbox">
                 <label for="faq6" class="faq-label">
                   <div class="row">
@@ -299,15 +287,11 @@
               </div>
             </div>
             <div class="row">
-              <div class="col l9 offset-l1">
+              <div class="col l8 offset-l2 s12">
               <hr />
               </div>
             </div>
           </div>
-
-
-
-
         </section>
 
         <section id="rsvp">
