--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   </div>
                 </label>
                 <div class="faq-content">
-                  Western semi-formal, this means suits and dresses
+                  Western formal wedding attire, this means suits and dresses
                 </div>
               </div>
             </div>
